--- a/question-focus/focus.html
+++ b/question-focus/focus.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Focus</title>
+    <!-- Fixed the CSS File -->
 		<link href="CSS.css" rel="stylesheet" type="text/css">
 		<script src="JS.js"></script>
 		
